[package]
name = "portfolio-cms"
version = "0.1.0"
description = "Local desktop CMS for the portfolio"
authors = ["Luis Martinez"]
edition = "2021"

# The library is what the Tauri runtime (and mobile entry points) call into.
[lib]
name = "portfolio_cms_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
